# isonymic-package

./: .gitignore  README.md  setup.cfg  setup.py
app/: README.md
app/isonymic/src/: indicators.py
docs/source/: conf.py  index.rst
