[metadata]
name = isonymic
version = 0.0.1
author = Leo Morales
author_email = moralesleonardo.rw@gmail.com
description = A simple Python package for isonymy studies from population surnames
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/LeoMorales/isonymic-package
project_urls =
    Bug Tracker = https://github.com/LeoMorales/isonymic-package
    repository = https://github.com/LeoMorales/isonymic-package
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src